# PyPackage

./: README.md  pyproject.toml
PyPackage/: AnotherModule.py  PyPackage.py  __init__.py  __main__.py  script.py
